--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="search_prompt">Enter query results</string>
     <string name="save_label">Search</string>
+    <string name="title_activity_image_results">ImageResultsActivity</string>
 </resources>
